# libemojidex

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  swigtest.i
docs/: doxygen-config
docs/html/: annotated.html  checksums_8h_source.html  classEmojidex_1_1Client-members.html  classEmojidex_1_1Client.html  classEmojidex_1_1Client__coll__graph.map  classEmojidex_1_1Client__coll__graph.md5  classEmojidex_1_1Data_1_1Checksums-members.html  classEmojidex_1_1Data_1_1Checksums.html  classEmojidex_1_1Data_1_1Collection-members.html  classEmojidex_1_1Data_1_1Collection.html  classEmojidex_1_1Data_1_1Collection__coll__graph.map  classEmojidex_1_1Data_1_1Collection__coll__graph.md5  classEmojidex_1_1Data_1_1Emoji-members.html  classEmojidex_1_1Data_1_1Emoji.html  classEmojidex_1_1Data_1_1Emoji__coll__graph.map  classEmojidex_1_1Data_1_1Emoji__coll__graph.md5  classEmojidex_1_1Data_1_1MojiCodes-members.html  classEmojidex_1_1Data_1_1MojiCodes.html  classEmojidex_1_1Service_1_1Collector-members.html  classEmojidex_1_1Service_1_1Collector.html  classEmojidex_1_1Service_1_1HistoryItem-members.html  classEmojidex_1_1Service_1_1HistoryItem.html  classEmojidex_1_1Service_1_1Indexes-members.html  classEmojidex_1_1Service_1_1Indexes.html  classEmojidex_1_1Service_1_1QueryOpts-members.html  classEmojidex_1_1Service_1_1QueryOpts.html  classEmojidex_1_1Service_1_1Search-members.html  classEmojidex_1_1Service_1_1Search.html  classEmojidex_1_1Service_1_1Settings-members.html  classEmojidex_1_1Service_1_1Settings.html  classEmojidex_1_1Service_1_1Transactor-members.html  classEmojidex_1_1Service_1_1Transactor.html  classEmojidex_1_1Service_1_1User-members.html  classEmojidex_1_1Service_1_1User.html  classEmojidex_1_1Service_1_1User__coll__graph.map  classEmojidex_1_1Service_1_1User__coll__graph.md5  classes.html  client_8h_source.html  collection_8h_source.html  collector_8h_source.html  (+25 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+20 more)
docs/latex/: annotated.tex  classEmojidex_1_1Client.tex  classEmojidex_1_1Client__coll__graph.md5  classEmojidex_1_1Data_1_1Checksums.tex  classEmojidex_1_1Data_1_1Collection.tex  classEmojidex_1_1Data_1_1Collection__coll__graph.md5  classEmojidex_1_1Data_1_1Emoji.tex  classEmojidex_1_1Data_1_1Emoji__coll__graph.md5  classEmojidex_1_1Data_1_1MojiCodes.tex  classEmojidex_1_1Service_1_1Collector.tex  classEmojidex_1_1Service_1_1HistoryItem.tex  classEmojidex_1_1Service_1_1Indexes.tex  classEmojidex_1_1Service_1_1QueryOpts.tex  classEmojidex_1_1Service_1_1Search.tex  classEmojidex_1_1Service_1_1Settings.tex  classEmojidex_1_1Service_1_1Transactor.tex  classEmojidex_1_1Service_1_1User.tex  classEmojidex_1_1Service_1_1User__coll__graph.md5  dir_4f691f982165d1317925cee58b4b4f56.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_c1be8d27e7f84178e95f152701110b19.tex  dir_d4136be42eb44961d5102ac23d349cba.tex  index.tex  namespaceEmojidex.tex  namespaces.tex  refman.tex
interfaces/android/: CMakeLists.txt  androidbuild.rb  postbuild.rb  prepare.rb
interfaces/android/jni/: Android.mk  Application.mk
interfaces/android/msgpack/: Android.mk
interfaces/android/src/: LibemojidexInitializer.java.in  NativeLibLoader.java.in
interfaces/java/: CMakeLists.txt
interfaces/java/src/: LibemojidexInitializer.java.in  NativeLibLoader.java.in
interfaces/objc/: CMakeLists.txt  CMakeLists.txt.in
interfaces/objc/src/: client.h  client.mm  data.h  libemojidex.h  libemojidex.mm  utils+private.h
interfaces/objc/src/data/: checksums+private.h  checksums.h  checksums.mm  collection+private.h  collection.h  collection.mm  emoji+private.h  emoji.h  emoji.mm  moji_codes+private.h  moji_codes.h  moji_codes.mm
interfaces/objc/src/service/: indexes+private.h  indexes.h  indexes.mm  query_opts+private.h  query_opts.h  query_opts.mm  search+private.h  search.h  search.mm
interfaces/objective_c/: CMakeLists.txt  CMakeLists.txt.in
interfaces/objective_c/src/: client.h  client.mm  test.h  test.mm
interfaces/objective_c/src/data/: collection.h  collection.mm  collection_private.h  moji_codes.h  moji_codes.mm  moji_codes_private.h
interfaces/objective_c/src/service/: indexes.h  indexes.mm  search.h  search.mm
interfaces/ruby/: CMakeLists.txt
interfaces/ruby/gem/: libemojidex.gemspec
interfaces/ruby/gem/ext/libemojidex/: extconf.rb
natives/android/: build.rb
samples/java/src/: HelloEmojidex.java
spec/: CMakeLists.txt  client_spec.cpp  libemojidex_spec.cpp  libemojidex_test.cpp
src/: StringVector.i  client.cpp  client.h  client.i  cstring_to_jstring.i  data.h  data.i  defs.h  emoji.h  emojidex.h  emojidex.i  libemojidex.cpp  libemojidex.h  libemojidex.i  service.i  string_vector.i  swigtest.i  unordered_map_string_checksums.i  unordered_map_string_emoji.i  unordered_map_string_string.i  version.h  version.h.in  version.i
src/client/: comm.cpp  comm.h  search.cpp  search.h  transactor.cpp  transactor.h
src/data/: checksums.cpp  checksums.h  checksums.i  collection.cpp  collection.h  collection.i  combination.h  combination.i  emoji.cpp  emoji.h  emoji.i  moji_codes.h  moji_codes.i  unordered_map.h  unordered_map.i
src/java/: NativeLibLoader.java
src/service/: collector.cpp  collector.h  indexes.cpp  indexes.h  indexes.i  query_opts.cpp  query_opts.h  query_opts.i  search.cpp  search.h  search.i  settings.cpp  settings.h  settings.i  transactor.cpp  transactor.h  transactor.i  user.cpp  user.h  user.i
src/service/search/: conditions.cpp  conditions.h
src/service/user/: history.cpp  history.h  history_item.cpp  history_item.h  history_item.i
