CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LIBEMOJIDEX)


# Generate version header
SET(EMOJIDEX_LIB_VERSION_MAJOR 0)
SET(EMOJIDEX_LIB_VERSION_MINOR 1)
SET(EMOJIDEX_LIB_VERSION_PATCH 0)
SET(EMOJIDEX_LIB_VERSION "${EMOJIDEX_LIB_VERSION_MAJOR}.${EMOJIDEX_LIB_VERSION_MINOR}.${EMOJIDEX_LIB_VERSION_PATCH}")
CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/src/version.h.in ${PROJECT_SOURCE_DIR}/src/version.h @ONLY)

# SET(CMAKE_POSITION_INDEPENDENT_CODE ON)


# We're using C++11
if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
endif()

# rapidJSON is lib only so only uncomment this if you want to 
# also run specs on it
# ADD_SUBDIRECTORY(vendor/rapidjson)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src
	${PROJECT_SOURCE_DIR}/vendor/rapidjson/include
	)

# Generate dynamic library
FIND_PACKAGE(Boost REQUIRED
	system
	filesystem
	)
FIND_PACKAGE(OpenSSL)

SET(EMOJIDEX_DYNAMIC_LIB_NAME emojidex)
SET(EMOJIDEX_CPP_FILES
	${PROJECT_SOURCE_DIR}/src/client.cpp
	${PROJECT_SOURCE_DIR}/src/service/transactor.cpp
	${PROJECT_SOURCE_DIR}/src/service/indexes.cpp
	${PROJECT_SOURCE_DIR}/src/service/search.cpp
	${PROJECT_SOURCE_DIR}/src/data/collection.cpp
)

SET(EMOJIDEX_LINK_LIBRARIES
	${Boost_FILESYSTEM_LIBRARY}
	${Boost_SYSTEM_LIBRARY}
	${OPENSSL_LIBRARIES}
)

ADD_LIBRARY(${EMOJIDEX_DYNAMIC_LIB_NAME} SHARED ${EMOJIDEX_CPP_FILES})
TARGET_LINK_LIBRARIES(${EMOJIDEX_DYNAMIC_LIB_NAME} ${EMOJIDEX_LINK_LIBRARIES})

# Specs
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/spec)
ENABLE_TESTING()

# Installation
INSTALL(FILES 
	${PROJECT_SOURCE_DIR}/src/version.h
	${PROJECT_SOURCE_DIR}/src/client.h
	${PROJECT_SOURCE_DIR}/src/service/indexes.h
	${PROJECT_SOURCE_DIR}/src/service/search.h
	${PROJECT_SOURCE_DIR}/src/data/emoji.h
	${PROJECT_SOURCE_DIR}/src/data/collection.h
	${PROJECT_SOURCE_DIR}/src/data/moji_codes.h
	DESTINATION "include/emojidex"
	)
INSTALL(TARGETS ${EMOJIDEX_DYNAMIC_LIB_NAME} DESTINATION "lib")


# Generate static library
SET(STATIC_LIB_TARGET static)
SET(STATIC_LIB_NAME emojidex_static)

ADD_LIBRARY(${STATIC_LIB_TARGET} ${EMOJIDEX_CPP_FILES})
TARGET_LINK_LIBRARIES(${STATIC_LIB_TARGET} ${EMOJIDEX_LINK_LIBRARIES})

SET_TARGET_PROPERTIES(${STATIC_LIB_TARGET}
	PROPERTIES
	EXCLUDE_FROM_ALL TRUE
	POSITION_INDEPENDENT_CODE TRUE
	OUTPUT_NAME ${STATIC_LIB_NAME}
)

OPTION(JAVABUILD "Build Java interfaces")
IF(JAVABUILD)
  INCLUDE(${PROJECT_SOURCE_DIR}/interfaces/java/CMakeLists.txt)
ENDIF(JAVABUILD)
