CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LIBEMOJIDEX_TEST)

ENABLE_TESTING()

ADD_EXECUTABLE(test
	EXCLUDE_FROM_ALL
    ${PROJECT_SOURCE_DIR}/libemojidex_test.cpp
)

FIND_PACKAGE(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	${PROJECT_BINARY_DIR}
	${PROJECT_SOURCE_DIR}../src
	)
TARGET_LINK_LIBRARIES(test
	${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
	emojidex
	)

ADD_TEST(
	NAME test
	COMMAND spec/test
)
