CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(BUILD_TESTS)
  PROJECT(LIBEMOJIDEX_TEST)

  FIND_PACKAGE(Boost COMPONENTS
    unit_test_framework REQUIRED)
  INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIRS}
    ${PROJECT_BINARY_DIR}
    ${PROJECT_SOURCE_DIR}../src
  )

  ADD_EXECUTABLE(client_spec
      ${PROJECT_SOURCE_DIR}/client_spec.cpp
  )
  TARGET_LINK_LIBRARIES(client_spec
    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
    emojidex
  )

  ENABLE_TESTING()
  ADD_TEST(
    NAME client_spec
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMAND client_spec
  )
endif(BUILD_TESTS)
