
SET(OBJC_TARGET objc)
SET(OBJC_LIB_NAME emojidex_objc)

# TODO: Find GNUstep include directory path.
SET(GNUSTEP_INCLUDE_DIRS "/usr/include/GNUstep")
INCLUDE_DIRECTORIES(${GNUSTEP_INCLUDE_DIRS})

SET(OBJC_HEADER_FILES
  ${PROJECT_SOURCE_DIR}/interfaces/objective_c/src/test.h
)

SET(OBJC_SOURCE_FILES
  ${PROJECT_SOURCE_DIR}/interfaces/objective_c/src/test.mm
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fconstant-string-class=NSConstantString")

ADD_LIBRARY(${OBJC_TARGET} SHARED ${OBJC_SOURCE_FILES})
TARGET_LINK_LIBRARIES(${OBJC_TARGET} "-lobjc" "-lgnustep-base")

SET_TARGET_PROPERTIES(${OBJC_TARGET}
  PROPERTIES
  EXCLUDE_FROM_ALL TRUE
  POSITION_INDEPENDENT_CODE TRUE
  OUTPUT_NAME ${OBJC_LIB_NAME}
)

#ADD_DEPENDENCIES(${OBJC_TARGET} ${STATIC_LIB_TARGET})
