# Generate ruby sources with SWIG
FIND_PACKAGE(Ruby REQUIRED)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE_DIRECTORIES(${RUBY_INCLUDE_DIRS})
INCLUDE(UseSWIG)

SET(SWIG_RUBY_TARGET ruby)
SET(SWIG_RUBY_LIB_NAME libemojidex_ruby)

#SET(CMAKE_SWIG_FLAGS "-initname;${SWIG_RUBY_LIB_NAME}")
SET(CMAKE_SWIG_OUTDIR "src")
SET_SOURCE_FILES_PROPERTIES(
    "${PROJECT_SOURCE_DIR}/src/emojidex.i"
    "${PROJECT_SOURCE_DIR}/src/data.i"
    "${PROJECT_SOURCE_DIR}/src/data/checksums.i"
    "${PROJECT_SOURCE_DIR}/src/data/emoji.i"
    "${PROJECT_SOURCE_DIR}/src/data/collection.i"
    CPLUSPLUS ON)

SWIG_ADD_MODULE(${SWIG_RUBY_TARGET} ruby 
    "${PROJECT_SOURCE_DIR}/src/data/emoji.i"
    "${PROJECT_SOURCE_DIR}/src/data/collection.i"
    "${PROJECT_SOURCE_DIR}/src/data/checksums.i"
    )
SWIG_LINK_LIBRARIES(${SWIG_RUBY_TARGET} ${EMOJIDEX_DYNAMIC_LIB_NAME})
SET_TARGET_PROPERTIES(${SWIG_RUBY_TARGET}
  PROPERTIES
  #EXCLUDE_FROM_ALL TRUE
  OUTPUT_NAME ${SWIG_RUBY_LIB_NAME}
)

ADD_DEPENDENCIES(${SWIG_RUBY_TARGET} ${EMOJIDEX_DYNAMIC_LIB_NAME})
